nullpoint exception on route activity fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Location Tracker</string>
-    <string name="google_maps_key">YOUR KEY HERE</string>
+    <string name="google_maps_key">YOUR API KEY HERE</string>
 
 </resources>
